--- a/css/style.css
+++ b/css/style.css
@@ -1286,8 +1286,15 @@ nav li {
     background-color: lightgray;
     width: 40%;
     border-radius: 30px 0 0 30px;
+    align-items: center;
+    justify-content: center;
 }
-
+#people img 
+{
+    height: 50%;
+    width: 50%;
+ border-radius: 20px;
+}
 #cracc {
     width: 60%;
     padding: 5vh 1vw 5vh 1vw;
@@ -1379,7 +1386,7 @@ nav li {
 
 .form_frontco input[type=email] {
     display: flex;
-    width: 60%;
+    width: 100%;
     padding: 1vh 1vw;
     margin: 0 0 1vh 0;
     box-sizing: border-box;
@@ -1395,7 +1402,7 @@ nav li {
 }
 
 .form_frontco input[type=password] {
-    width: 60%;
+    width: 100%;
     padding: 1vh 1vw;
     margin: 2vh 0 5vh 0;
     box-sizing: border-box;
@@ -1419,7 +1426,7 @@ nav li {
 } 
 .form_modtext input[type=text] { 
 
-    width: 50vw;
+    /* width: 50vw; */
     height: auto;
     padding: 1vh 1vw;
     margin: 8px 0;
@@ -1694,7 +1701,11 @@ img.leaflet-interactive {
     {
         flex-direction: column;
     }
+    
 
+.form_modtext input[type=text] {
+    width: 50vw;
+}
     .placement{
         flex-direction: column;
     }
