--- a/css/style.css
+++ b/css/style.css
@@ -493,6 +493,25 @@ color: #1D2026;
     align-content: center;
 }
 
+.suppPhoto{
+    display: flex;
+    justify-content: flex-start;
+    width: 80%;
+    align-items: center;
+}
+
+.suppPhoto input[type="checkbox"]{
+    display: flex;
+    margin-left: 1vw;
+}
+
+.photoTexte{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
 #imageSupp form{
     width: 100vw;
     display: flex;
