amelioration slider lieu

--- a/css/style.css
+++ b/css/style.css
@@ -2375,7 +2375,7 @@ background-image: url(https://27.monvillagenormand.fr/images/300/327000359.webp)
 
 
 
-#slider-lieu #voir-photos {
+ #voir-photos {
     color: purple;
     position: absolute;
     text-decoration: underline;
