--- a/css/style.css
+++ b/css/style.css
@@ -942,7 +942,7 @@ margin-left: 10%;
 #txt-infos-lieu {
     margin-left: 50px;
     z-index: 2;
-    margin-top: -40vh;
+    margin-top: -55vh;
 }
 
 #txt-infos-lieu p {
@@ -1008,14 +1008,22 @@ margin-left: 10%;
 }
 
 #hordou {
+
+    display: flex;
+    align-self: center;
     background-color: #4062BB;
-    width: 100vw;
+    width: fit-content;
     height: auto;
     padding: 0px 0px 0px 0px;
     margin-top: 20vh;
-    border-radius: 20px; 
+    border-radius: 20px;
     color: #fff;
 
+} 
+
+#hordou h2 
+{
+    margin: 1vh 1vw 1vh 1vw; 
 }
 
 #cont-hor
@@ -2292,6 +2300,7 @@ input[type="file"] {
 
 .card h3,
 .card p {
+    width: 75%;
     -webkit-transform: translateX(-2vw);
     transform: translateX(-2vh);
     margin: 0;
