--- a/css/style.css
+++ b/css/style.css
@@ -891,6 +891,7 @@ margin-left: 10%;
     flex-direction: column;
     align-items: flex-end;
     margin-left: -2vw;
+    margin-right: 2vw;
     position: relative;
 
 
